// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders Content 1`] = `
<div
  className="centered-narrow"
>
  <div
    className="Content"
  >
    <div
      className="Fields"
    >
      <div
        className="fieldset active form-group"
      >
        <h2>
          Introduction
        </h2>
        <p>
          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
        </p>
        <div
          className="subNavigation"
        >
          <button
            className="active"
            onClick={[Function]}
          >
            Introduction
          </button>
          <button
            className=""
            onClick={[Function]}
          >
            Dimensions
          </button>
          <button
            className=""
            onClick={[Function]}
          >
            Solar
          </button>
          <button
            className=""
            onClick={[Function]}
          >
            Location
          </button>
        </div>
        <div
          className="subNavigationContent"
        >
          <section
            className="Questions"
          >
            <div
              className="input-group"
            >
              <label
                className=""
                htmlFor="buildingOwner"
              >
                Building Owner
              </label>
              <input
                className="form-control"
                id="buildingOwner"
                name="buildingOwner"
                onChange={[Function]}
                required={true}
                type="text"
              />
            </div>
            <div
              className="input-group"
            >
              <label
                className=""
                htmlFor="address"
              >
                Address
              </label>
              <input
                className="form-control"
                id="address"
                name="address"
                onChange={[Function]}
                required={true}
                type="text"
              />
            </div>
          </section>
        </div>
      </div>
      <div
        className="fieldset  form-group"
      >
        <h2>
          Parameters - Model A
        </h2>
        <p>
          How is the existing home built?
        </p>
        <div
          className="subNavigation"
        >
          <button
            className="active"
            onClick={[Function]}
          >
            Build
          </button>
          <button
            className=""
            onClick={[Function]}
          >
            Mechanical
          </button>
          <button
            className=""
            onClick={[Function]}
          >
            Energy
          </button>
        </div>
        <div
          className="subNavigationContent"
        >
          <section
            className="Questions"
          >
            <div
              className="input-group"
            >
              <label
                className=""
                htmlFor="airtightness"
              >
                Airtightness
              </label>
              <select
                className="form-control"
                id="airtightness"
                name="airtightness"
                onChange={[Function]}
                required={true}
                value="10 (100 years old)"
              >
                <option
                  disabled="disabled"
                  value="disabled"
                >
                  Select an option
                </option>
                <option>
                  0.6 (Passivhaus)
                </option>
                <option>
                  0.8
                </option>
                <option>
                  1.0 (Net-zero)
                </option>
                <option>
                  1.5
                </option>
                <option>
                  2.5 (NBC)
                </option>
                <option>
                  3
                </option>
                <option>
                  5
                </option>
                <option>
                  10 (100 years old)
                </option>
              </select>
              <div
                className="input-group-append"
              >
                <span
                  className="input-group-text"
                >
                  ACH @50 Pa
                </span>
              </div>
            </div>
            <div
              className="spacer"
            >
               
            </div>
            <div
              className="input-group"
            >
              <label
                className=""
                htmlFor="wallAboveGrade"
              >
                Wall Above Grade
              </label>
              <select
                className="form-control"
                id="wallAboveGrade"
                name="wallAboveGrade"
                onChange={[Function]}
                required={true}
                value="R10 - 2x4 w Batt"
              >
                <option
                  disabled="disabled"
                  value="disabled"
                >
                  Select an option
                </option>
                <option>
                  R1 - Uninsulated
                </option>
                <option>
                  R10 - 2x4 w Batt
                </option>
                <option>
                  R15 - 2x6 w Batt
                </option>
                <option>
                  R17 - NBC
                </option>
                <option>
                  R19 - 2x8 w Batt
                </option>
                <option>
                  R21 - 2x4 + 3" Rigid
                </option>
                <option>
                  R31 - 2x4 + 6" Rigid
                </option>
                <option>
                  R35 - 2x4 + 2x8 w Batt
                </option>
                <option>
                  R42 - 2x4 + 9.5" I-joist
                </option>
                <option>
                  R50 - 2x4 + 12" I-joist
                </option>
                <option>
                  R26 - 2x6 + 3" Rigid
                </option>
                <option>
                  R55 - 2x6 +12" I-joist
                </option>
                <option>
                  R75 - 2x6 + 16" I-joist
                </option>
              </select>
              <div
                className="input-group-append"
              >
                <span
                  className="input-group-text"
                >
                  W/m²K
                </span>
              </div>
            </div>
            <div
              className="input-group"
            >
              <label
                className=""
                htmlFor="wallBelowGrade"
              >
                Wall Below Grade
              </label>
              <select
                className="form-control"
                id="wallBelowGrade"
                name="wallBelowGrade"
                onChange={[Function]}
                required={true}
                value="R6 - Concrete Uninsulated"
              >
                <option
                  disabled="disabled"
                  value="disabled"
                >
                  Select an option
                </option>
                <option>
                  R6 - Concrete Uninsulated
                </option>
                <option>
                  R13 - Conc. + 3" Rigid
                </option>
                <option>
                  R17 - NBC
                </option>
                <option>
                  R25 - Conc. + 6" Rigid
                </option>
                <option>
                  R37 - Conc. + 9" Rigid
                </option>
                <option>
                  R9 - 2x4 + Conc.
                </option>
                <option>
                  R14 - 2x6 + Conc.
                </option>
                <option>
                  R30 - 2x4 + 5.5" Batt + Conc.
                </option>
              </select>
              <div
                className="input-group-append"
              >
                <span
                  className="input-group-text"
                >
                  W/m²K
                </span>
              </div>
            </div>
            <div
              className="input-group"
            >
              <label
                className=""
                htmlFor="roof"
              >
                Roof
              </label>
              <select
                className="form-control"
                id="roof"
                name="roof"
                onChange={[Function]}
                required={true}
                value="R20 - 6\\""
              >
                <option
                  disabled="disabled"
                  value="disabled"
                >
                  Select an option
                </option>
                <option>
                  R1 - Uninsulated
                </option>
                <option>
                  R20 - 6"
                </option>
                <option>
                  R40 - 12"
                </option>
                <option>
                  R50 - NBC
                </option>
                <option>
                  R60 - 18"
                </option>
                <option>
                  R80 - 24"
                </option>
                <option>
                  R100 - 30"
                </option>
              </select>
              <div
                className="input-group-append"
              >
                <span
                  className="input-group-text"
                >
                  W/m²K
                </span>
              </div>
            </div>
            <div
              className="input-group"
            >
              <label
                className=""
                htmlFor="floor"
              >
                Floor
              </label>
              <select
                className="form-control"
                id="floor"
                name="floor"
                onChange={[Function]}
                required={true}
                value="R6 - Uninsulated [NBC Below Frost]"
              >
                <option
                  disabled="disabled"
                  value="disabled"
                >
                  Select an option
                </option>
                <option>
                  R6 - Uninsulated [NBC Below Frost]
                </option>
                <option>
                  R11 - NBC Above Frost Line
                </option>
                <option>
                  R13 - 3" Rigid
                </option>
                <option>
                  R16 - NBC Heated Floor or Slab On Grade
                </option>
                <option>
                  R25 - 6" Rigid
                </option>
                <option>
                  R37 - 9" Rigid
                </option>
              </select>
              <div
                className="input-group-append"
              >
                <span
                  className="input-group-text"
                >
                  W/m²K
                </span>
              </div>
            </div>
            <div
              className="spacer"
            >
               
            </div>
            <div
              className="input-group"
            >
              <label
                className=""
                htmlFor="windows"
              >
                Windows
              </label>
              <select
                className="form-control"
                id="windows"
                name="windows"
                onChange={[Function]}
                required={true}
                value="Double Pane"
              >
                <option
                  disabled="disabled"
                  value="disabled"
                >
                  Select an option
                </option>
                <option>
                  Single Pane
                </option>
                <option>
                  Double Pane
                </option>
                <option>
                  NBC
                </option>
                <option>
                  Improved Double Pane (Argon, Low-E)
                </option>
                <option>
                  Triple Pane (PVC, uninsulated)
                </option>
                <option>
                  Triple Pane (High Performance) - High SHGC
                </option>
                <option>
                  Triple Pane (High Performance) - Low SHGC
                </option>
                <option>
                  Triple Pane (Passivhaus)
                </option>
                <option>
                  Quad Pane (or Passivhaus Cold Climate)
                </option>
              </select>
              <div
                className="input-group-append"
              >
                <span
                  className="input-group-text"
                >
                  W/m²K
                </span>
              </div>
            </div>
            <div
              className="input-group"
            >
              <label
                className=""
                htmlFor="solidDoor"
              >
                Solid Door
              </label>
              <select
                className="form-control"
                id="solidDoor"
                name="solidDoor"
                onChange={[Function]}
                required={true}
                value="Uninsulated"
              >
                <option
                  disabled="disabled"
                  value="disabled"
                >
                  Select an option
                </option>
                <option>
                  Uninsulated
                </option>
                <option>
                  Insulated (R10)
                </option>
              </select>
              <div
                className="input-group-append"
              >
                <span
                  className="input-group-text"
                >
                  W/m²K
                </span>
              </div>
            </div>
          </section>
        </div>
      </div>
      <div
        className="fieldset  form-group"
      >
        <h2>
          Parameters - Model B
        </h2>
        <p>
          What improvements would you like to consider?
        </p>
        <div
          className="subNavigation"
        >
          <button
            className="active"
            onClick={[Function]}
          >
            Build
          </button>
          <button
            className=""
            onClick={[Function]}
          >
            Mechanical
          </button>
          <button
            className=""
            onClick={[Function]}
          >
            Energy
          </button>
        </div>
        <div
          className="subNavigationContent"
        >
          <section
            className="Questions"
          >
            <div
              className="input-group"
            >
              <label
                className=""
                htmlFor="airtightnessB"
              >
                Airtightness
              </label>
              <select
                className="form-control"
                id="airtightnessB"
                name="airtightnessB"
                onChange={[Function]}
                required={true}
                value="1.0 (Net-zero)"
              >
                <option
                  disabled="disabled"
                  value="disabled"
                >
                  Select an option
                </option>
                <option>
                  0.6 (Passivhaus)
                </option>
                <option>
                  0.8
                </option>
                <option>
                  1.0 (Net-zero)
                </option>
                <option>
                  1.5
                </option>
                <option>
                  2.5 (NBC)
                </option>
                <option>
                  3
                </option>
                <option>
                  5
                </option>
                <option>
                  10 (100 years old)
                </option>
              </select>
              <div
                className="input-group-append"
              >
                <span
                  className="input-group-text"
                >
                  ACH @50 Pa
                </span>
              </div>
            </div>
            <div
              className="spacer"
            >
               
            </div>
            <div
              className="input-group"
            >
              <label
                className=""
                htmlFor="wallAboveGradeB"
              >
                Wall Above Grade
              </label>
              <select
                className="form-control"
                id="wallAboveGradeB"
                name="wallAboveGradeB"
                onChange={[Function]}
                required={true}
                value="R31 - 2x4 + 6\\" Rigid"
              >
                <option
                  disabled="disabled"
                  value="disabled"
                >
                  Select an option
                </option>
                <option>
                  R1 - Uninsulated
                </option>
                <option>
                  R10 - 2x4 w Batt
                </option>
                <option>
                  R15 - 2x6 w Batt
                </option>
                <option>
                  R17 - NBC
                </option>
                <option>
                  R19 - 2x8 w Batt
                </option>
                <option>
                  R21 - 2x4 + 3" Rigid
                </option>
                <option>
                  R31 - 2x4 + 6" Rigid
                </option>
                <option>
                  R35 - 2x4 + 2x8 w Batt
                </option>
                <option>
                  R42 - 2x4 + 9.5" I-joist
                </option>
                <option>
                  R50 - 2x4 + 12" I-joist
                </option>
                <option>
                  R26 - 2x6 + 3" Rigid
                </option>
                <option>
                  R55 - 2x6 +12" I-joist
                </option>
                <option>
                  R75 - 2x6 + 16" I-joist
                </option>
              </select>
              <div
                className="input-group-append"
              >
                <span
                  className="input-group-text"
                >
                  W/m²K
                </span>
              </div>
            </div>
            <div
              className="input-group"
            >
              <label
                className=""
                htmlFor="wallBelowGradeB"
              >
                Wall Below Grade
              </label>
              <select
                className="form-control"
                id="wallBelowGradeB"
                name="wallBelowGradeB"
                onChange={[Function]}
                required={true}
                value="R25 - Conc. + 6\\" Rigid"
              >
                <option
                  disabled="disabled"
                  value="disabled"
                >
                  Select an option
                </option>
                <option>
                  R6 - Concrete Uninsulated
                </option>
                <option>
                  R13 - Conc. + 3" Rigid
                </option>
                <option>
                  R17 - NBC
                </option>
                <option>
                  R25 - Conc. + 6" Rigid
                </option>
                <option>
                  R37 - Conc. + 9" Rigid
                </option>
                <option>
                  R9 - 2x4 + Conc.
                </option>
                <option>
                  R14 - 2x6 + Conc.
                </option>
                <option>
                  R30 - 2x4 + 5.5" Batt + Conc.
                </option>
              </select>
              <div
                className="input-group-append"
              >
                <span
                  className="input-group-text"
                >
                  W/m²K
                </span>
              </div>
            </div>
            <div
              className="input-group"
            >
              <label
                className=""
                htmlFor="roofB"
              >
                Roof
              </label>
              <select
                className="form-control"
                id="roofB"
                name="roofB"
                onChange={[Function]}
                required={true}
                value="R80 - 24\\""
              >
                <option
                  disabled="disabled"
                  value="disabled"
                >
                  Select an option
                </option>
                <option>
                  R1 - Uninsulated
                </option>
                <option>
                  R20 - 6"
                </option>
                <option>
                  R40 - 12"
                </option>
                <option>
                  R50 - NBC
                </option>
                <option>
                  R60 - 18"
                </option>
                <option>
                  R80 - 24"
                </option>
                <option>
                  R100 - 30"
                </option>
              </select>
              <div
                className="input-group-append"
              >
                <span
                  className="input-group-text"
                >
                  W/m²K
                </span>
              </div>
            </div>
            <div
              className="input-group"
            >
              <label
                className=""
                htmlFor="floorB"
              >
                Floor
              </label>
              <select
                className="form-control"
                id="floorB"
                name="floorB"
                onChange={[Function]}
                required={true}
                value="R25 - 6\\" Rigid"
              >
                <option
                  disabled="disabled"
                  value="disabled"
                >
                  Select an option
                </option>
                <option>
                  R6 - Uninsulated [NBC Below Frost]
                </option>
                <option>
                  R11 - NBC Above Frost Line
                </option>
                <option>
                  R13 - 3" Rigid
                </option>
                <option>
                  R16 - NBC Heated Floor or Slab On Grade
                </option>
                <option>
                  R25 - 6" Rigid
                </option>
                <option>
                  R37 - 9" Rigid
                </option>
              </select>
              <div
                className="input-group-append"
              >
                <span
                  className="input-group-text"
                >
                  W/m²K
                </span>
              </div>
            </div>
            <div
              className="spacer"
            >
               
            </div>
            <div
              className="input-group"
            >
              <label
                className=""
                htmlFor="windowsB"
              >
                Windows
              </label>
              <select
                className="form-control"
                id="windowsB"
                name="windowsB"
                onChange={[Function]}
                required={true}
                value="Triple Pane (High Performance) - Low SHGC"
              >
                <option
                  disabled="disabled"
                  value="disabled"
                >
                  Select an option
                </option>
                <option>
                  Single Pane
                </option>
                <option>
                  Double Pane
                </option>
                <option>
                  NBC
                </option>
                <option>
                  Improved Double Pane (Argon, Low-E)
                </option>
                <option>
                  Triple Pane (PVC, uninsulated)
                </option>
                <option>
                  Triple Pane (High Performance) - High SHGC
                </option>
                <option>
                  Triple Pane (High Performance) - Low SHGC
                </option>
                <option>
                  Triple Pane (Passivhaus)
                </option>
                <option>
                  Quad Pane (or Passivhaus Cold Climate)
                </option>
              </select>
              <div
                className="input-group-append"
              >
                <span
                  className="input-group-text"
                >
                  W/m²K
                </span>
              </div>
            </div>
            <div
              className="input-group"
            >
              <label
                className=""
                htmlFor="solidDoorB"
              >
                Solid Door
              </label>
              <select
                className="form-control"
                id="solidDoorB"
                name="solidDoorB"
                onChange={[Function]}
                required={true}
                value="Insulated (R10)"
              >
                <option
                  disabled="disabled"
                  value="disabled"
                >
                  Select an option
                </option>
                <option>
                  Uninsulated
                </option>
                <option>
                  Insulated (R10)
                </option>
              </select>
              <div
                className="input-group-append"
              >
                <span
                  className="input-group-text"
                >
                  W/m²K
                </span>
              </div>
            </div>
          </section>
        </div>
      </div>
      <div
        className="fieldset  form-group"
      >
        <h2>
          Financing the Net-zero Upgrade
        </h2>
        <p>
          Lorem ipsum
        </p>
        <div
          className="subNavigation"
        >
          <button
            className="active"
            onClick={[Function]}
          >
            Improvements
          </button>
        </div>
        <div
          className="subNavigationContent"
        >
          <section
            className="Questions"
          >
            <div
              className="input-group"
            >
              <label
                className=""
                htmlFor="designCost"
              >
                Design Unit Cost (Installed)
              </label>
              <input
                className="form-control"
                defaultValue={0}
                id="designCost"
                name="designCost"
                onChange={[Function]}
                required={false}
                type="number"
              />
              <div
                className="input-group-append"
              >
                <span
                  className="input-group-text"
                >
                  $
                </span>
              </div>
            </div>
            <div
              className="input-group"
            >
              <label
                className=""
                htmlFor="designQuantity"
              >
                Design Quantity
              </label>
              <input
                className="form-control"
                defaultValue={1}
                id="designQuantity"
                name="designQuantity"
                onChange={[Function]}
                required={false}
                type="number"
              />
            </div>
            <div
              className="input-group"
            >
              <label
                className=""
                htmlFor="airtightnessCost"
              >
                Airtightness Unit Cost (Installed)
              </label>
              <input
                className="form-control"
                defaultValue={10}
                id="airtightnessCost"
                name="airtightnessCost"
                onChange={[Function]}
                required={false}
                type="number"
              />
              <div
                className="input-group-append"
              >
                <span
                  className="input-group-text"
                >
                  $/m² of envelope
                </span>
              </div>
            </div>
            <div
              className="input-group"
            >
              <label
                className=""
                htmlFor="airtightnessQuantity"
              >
                Airtightness Quantity
                 (Calculated: 420.6)
              </label>
              <input
                className="form-control"
                id="airtightnessQuantity"
                name="airtightnessQuantity"
                onChange={[Function]}
                required={false}
                type="number"
              />
              <div
                className="input-group-append"
              >
                <span
                  className="input-group-text"
                >
                  m² of envelope
                </span>
              </div>
            </div>
            <div
              className="input-group"
            >
              <label
                className=""
                htmlFor="windowsCost"
              >
                Windows Unit Cost (Installed)
              </label>
              <input
                className="form-control"
                defaultValue={400}
                id="windowsCost"
                name="windowsCost"
                onChange={[Function]}
                required={false}
                type="number"
              />
              <div
                className="input-group-append"
              >
                <span
                  className="input-group-text"
                >
                  $/m² of window
                </span>
              </div>
            </div>
            <div
              className="input-group"
            >
              <label
                className=""
                htmlFor="windowsQuantity"
              >
                Windows Quantity
                 (Calculated: 28.0)
              </label>
              <input
                className="form-control"
                id="windowsQuantity"
                name="windowsQuantity"
                onChange={[Function]}
                required={false}
                type="number"
              />
              <div
                className="input-group-append"
              >
                <span
                  className="input-group-text"
                >
                  m² of window
                </span>
              </div>
            </div>
            <div
              className="input-group"
            >
              <label
                className=""
                htmlFor="insulationCost"
              >
                Insulation Unit Cost (Installed)
              </label>
              <input
                className="form-control"
                defaultValue={25}
                id="insulationCost"
                name="insulationCost"
                onChange={[Function]}
                required={false}
                type="number"
              />
              <div
                className="input-group-append"
              >
                <span
                  className="input-group-text"
                >
                  $/m² of envelope
                </span>
              </div>
            </div>
            <div
              className="input-group"
            >
              <label
                className=""
                htmlFor="insulationQuantity"
              >
                Insulation Quantity
                 (Calculated: 420.6)
              </label>
              <input
                className="form-control"
                id="insulationQuantity"
                name="insulationQuantity"
                onChange={[Function]}
                required={false}
                type="number"
              />
              <div
                className="input-group-append"
              >
                <span
                  className="input-group-text"
                >
                  m² of envelope
                </span>
              </div>
            </div>
            <div
              className="input-group"
            >
              <label
                className=""
                htmlFor="ventilationCost"
              >
                Ventilation with Energy Recovery (ERV/HRV) Unit Cost (Installed)
              </label>
              <input
                className="form-control"
                defaultValue={4000}
                id="ventilationCost"
                name="ventilationCost"
                onChange={[Function]}
                required={false}
                type="number"
              />
              <div
                className="input-group-append"
              >
                <span
                  className="input-group-text"
                >
                  $
                </span>
              </div>
            </div>
            <div
              className="input-group"
            >
              <label
                className=""
                htmlFor="ventilationQuantity"
              >
                Ventilation with Energy Recovery (ERV/HRV) Quantity
              </label>
              <input
                className="form-control"
                defaultValue={1}
                id="ventilationQuantity"
                name="ventilationQuantity"
                onChange={[Function]}
                required={false}
                type="number"
              />
            </div>
            <div
              className="input-group"
            >
              <label
                className=""
                htmlFor="heatPumpCost"
              >
                Heat Pump Unit Cost (Installed)
              </label>
              <input
                className="form-control"
                defaultValue={5000}
                id="heatPumpCost"
                name="heatPumpCost"
                onChange={[Function]}
                required={false}
                type="number"
              />
              <div
                className="input-group-append"
              >
                <span
                  className="input-group-text"
                >
                  $/m² of envelope
                </span>
              </div>
            </div>
            <div
              className="input-group"
            >
              <label
                className=""
                htmlFor="heatPumpQuantity"
              >
                Heat Pump Quantity
              </label>
              <input
                className="form-control"
                defaultValue={1}
                id="heatPumpQuantity"
                name="heatPumpQuantity"
                onChange={[Function]}
                required={false}
                type="number"
              />
            </div>
            <div
              className="input-group"
            >
              <label
                className=""
                htmlFor="waterHeaterCost"
              >
                Water Heater, Drain Water Heat Recovery Unit Cost (Installed)
              </label>
              <input
                className="form-control"
                defaultValue={2000}
                id="waterHeaterCost"
                name="waterHeaterCost"
                onChange={[Function]}
                required={false}
                type="number"
              />
              <div
                className="input-group-append"
              >
                <span
                  className="input-group-text"
                >
                  $/m² of window
                </span>
              </div>
            </div>
            <div
              className="input-group"
            >
              <label
                className=""
                htmlFor="waterHeaterQuantity"
              >
                Water Heater, Drain Water Heat Recovery Quantity
              </label>
              <input
                className="form-control"
                defaultValue={1}
                id="waterHeaterQuantity"
                name="waterHeaterQuantity"
                onChange={[Function]}
                required={false}
                type="number"
              />
            </div>
            <div
              className="input-group"
            >
              <label
                className=""
                htmlFor="solarCost"
              >
                Solar PV 13.3 kW Unit Cost (Installed)
              </label>
              <input
                className="form-control"
                defaultValue={412}
                id="solarCost"
                name="solarCost"
                onChange={[Function]}
                required={false}
                type="number"
              />
              <div
                className="input-group-append"
              >
                <span
                  className="input-group-text"
                >
                  $/m² of solar
                </span>
              </div>
            </div>
            <div
              className="input-group"
            >
              <label
                className=""
                htmlFor="solarQuantity"
              >
                Solar PV 13.3 kW Quantity
                 (Calculated: 64.4)
              </label>
              <input
                className="form-control"
                id="solarQuantity"
                name="solarQuantity"
                onChange={[Function]}
                required={false}
                type="number"
              />
              <div
                className="input-group-append"
              >
                <span
                  className="input-group-text"
                >
                  m² of solar
                </span>
              </div>
            </div>
            <div
              className="input-group"
            >
              <label
                className=""
                htmlFor="batteryCost"
              >
                Battery Unit Cost (Installed)
              </label>
              <input
                className="form-control"
                defaultValue={0}
                id="batteryCost"
                name="batteryCost"
                onChange={[Function]}
                required={false}
                type="number"
              />
              <div
                className="input-group-append"
              >
                <span
                  className="input-group-text"
                >
                  $/m² of solar
                </span>
              </div>
            </div>
            <div
              className="input-group"
            >
              <label
                className=""
                htmlFor="batteryQuantity"
              >
                Battery Quantity
              </label>
              <input
                className="form-control"
                id="batteryQuantity"
                name="batteryQuantity"
                onChange={[Function]}
                required={false}
                type="number"
              />
              <div
                className="input-group-append"
              >
                <span
                  className="input-group-text"
                >
                  m² of solar
                </span>
              </div>
            </div>
            <div
              className="input-group"
            >
              <label
                className=""
                htmlFor="energyMonitorCost"
              >
                Energy Monitor Unit Cost (Installed)
              </label>
              <input
                className="form-control"
                defaultValue={300}
                id="energyMonitorCost"
                name="energyMonitorCost"
                onChange={[Function]}
                required={false}
                type="number"
              />
              <div
                className="input-group-append"
              >
                <span
                  className="input-group-text"
                >
                  $
                </span>
              </div>
            </div>
            <div
              className="input-group"
            >
              <label
                className=""
                htmlFor="energyMonitorQuantity"
              >
                Energy Monitor Quantity
              </label>
              <input
                className="form-control"
                defaultValue={1}
                id="energyMonitorQuantity"
                name="energyMonitorQuantity"
                onChange={[Function]}
                required={false}
                type="number"
              />
            </div>
          </section>
        </div>
      </div>
      <div
        className="fieldset  form-group"
      >
        <h2>
          Business Case
        </h2>
        <p>
          Lorem ipsum
        </p>
        <div
          className="subNavigation"
        >
          <button
            className="active"
            onClick={[Function]}
          >
            Business
          </button>
        </div>
        <div
          className="subNavigationContent"
        >
          <section
            className="Questions"
          >
            <div
              className="input-group"
            >
              <label
                className=""
                htmlFor="paceLoanTerm"
              >
                PACE Loan Term
              </label>
              <input
                className="form-control"
                defaultValue={20}
                id="paceLoanTerm"
                name="paceLoanTerm"
                onChange={[Function]}
                required={true}
                type="number"
              />
              <div
                className="input-group-append"
              >
                <span
                  className="input-group-text"
                >
                  years
                </span>
              </div>
            </div>
            <div
              className="input-group"
            >
              <label
                className=""
                htmlFor="interest"
              >
                Interest
              </label>
              <input
                className="form-control"
                defaultValue={4}
                id="interest"
                name="interest"
                onChange={[Function]}
                required={true}
                type="number"
              />
              <div
                className="input-group-append"
              >
                <span
                  className="input-group-text"
                >
                  %
                </span>
              </div>
            </div>
          </section>
        </div>
      </div>
    </div>
    <div
      className="Navigation"
    >
      <button
        className="active"
        onClick={[Function]}
      >
        Introduction
      </button>
      <br />
      <button
        className=""
        onClick={[Function]}
      >
        Parameters - Model A
      </button>
      <br />
      <button
        className=""
        onClick={[Function]}
      >
        Parameters - Model B
      </button>
      <br />
      <button
        className=""
        onClick={[Function]}
      >
        Financing the Net-zero Upgrade
      </button>
      <br />
      <button
        className=""
        onClick={[Function]}
      >
        Business Case
      </button>
      <br />
    </div>
  </div>
  <div
    className="DevResults"
    style={
      Object {
        "backgroundColor": "white",
        "padding": "1rem",
      }
    }
  >
    <div>
      <br />
      <br />
      <br />
      <br />
      <h3>
        Input
      </h3>
      <pre>
        {
  "length": 10.56,
  "width": 6.09,
  "height": 7.59,
  "depth": 2.02,
  "interiorFloorArea": 162.1,
  "people": 4,
  "units": 1,
  "roofArea": 64.3,
  "floorArea": 64.3,
  "availableSolarArea": 64.3,
  "north": 6.48,
  "east": 3.24,
  "south": 12.97,
  "west": 3.24,
  "exteriorSolidDoorArea": 2.1,
  "buildingVolume": 618,
  "heatingDegreeDays": 5700,
  "heatingDegreeHours": 136.8,
  "airtightness": "10 (100 years old)",
  "wallAboveGrade": "R10 - 2x4 w Batt",
  "wallBelowGrade": "R6 - Concrete Uninsulated",
  "roof": "R20 - 6\\"",
  "floor": "R6 - Uninsulated [NBC Below Frost]",
  "windows": "Double Pane",
  "solidDoor": "Uninsulated",
  "ventilation": "Exhaust Only",
  "heating": "Mid Eff. Furnace / Boiler",
  "cooling": "None",
  "hotWaterHeater": "Mid Eff. Water Heater / Boiler",
  "hotWaterHeaterStorage": "Tank",
  "drainWaterHeatRecovery": "No",
  "hotWaterFixtures": "Standard fixtures, House",
  "lighting": "Standard Lighting, House",
  "appliances": "Standard Appliances, House",
  "plugLoads": "Fixed plug loads, House",
  "spaceHeatingFuelType": "Natural Gas (Fossil)",
  "hotWaterFuelType": "Natural Gas (Fossil)",
  "lightsAppliancesPlugsFuelType": "Electricity",
  "carbonPrice": 103,
  "electricityPrice": 0.15,
  "electricityCarbon": 0.6,
  "cleanElectricityPrice": 0.15,
  "cleanElectricityCarbon": 0,
  "naturalGasFossilPrice": 0.022,
  "naturalGasFossilCarbon": 0.25,
  "cleanGasPrice": 0.063,
  "cleanGasCarbon": 0,
  "propanePrice": 0.127,
  "propaneCarbon": 0.27,
  "woodPelletsPrice": 0.075,
  "woodPelletsCarbon": 0.27,
  "airtightnessB": "1.0 (Net-zero)",
  "wallAboveGradeB": "R31 - 2x4 + 6\\" Rigid",
  "wallBelowGradeB": "R25 - Conc. + 6\\" Rigid",
  "roofB": "R80 - 24\\"",
  "floorB": "R25 - 6\\" Rigid",
  "windowsB": "Triple Pane (High Performance) - Low SHGC",
  "solidDoorB": "Insulated (R10)",
  "ventilationB": "85%",
  "heatingB": "Air Source Heat Pump",
  "coolingB": "Air Source Heat Pump",
  "hotWaterHeaterB": "Heat Pump Water Heater",
  "hotWaterHeaterStorageB": "Tank",
  "drainWaterHeatRecoveryB": "Yes",
  "hotWaterFixturesB": "Low flow fixtures, House",
  "lightingB": "LED Lighting",
  "appliancesB": "EnergyStar Appliances, House",
  "plugLoadsB": "Fixed plug loads, House",
  "spaceHeatingFuelTypeB": "Clean Electricity",
  "hotWaterFuelTypeB": "Clean Electricity",
  "lightsAppliancesPlugsFuelTypeB": "Clean Electricity",
  "designCost": 0,
  "designQuantity": 1,
  "airtightnessCost": 10,
  "windowsCost": 400,
  "insulationCost": 25,
  "ventilationCost": 4000,
  "ventilationQuantity": 1,
  "heatPumpCost": 5000,
  "heatPumpQuantity": 1,
  "waterHeaterCost": 2000,
  "waterHeaterQuantity": 1,
  "solarCost": 412,
  "batteryCost": 0,
  "energyMonitorCost": 300,
  "energyMonitorQuantity": 1,
  "paceLoanTerm": 20,
  "interest": 4
}
      </pre>
    </div>
    <div>
      <br />
      <br />
      <br />
      <br />
      <h3>
        Output
      </h3>
      <pre>
        {
  "heatingAndCoolingA": {
    "totalHeatingQ": "44803.391936318345292",
    "totalCoolingQ": "10061.259715926341934871329707473284776329498920219525903392",
    "totalAreaLessDoor": "420.583",
    "totalWindowArea": "28.03"
  },
  "annualSpaceHeatingA": {
    "wallAboveGradeG1kwha": "16999.9309368",
    "wallBelowGradeG1kwha": "4600.9944",
    "roofG1kwha": "2498.13216",
    "floorG1kwha": "4398.12",
    "exteriorDoorsG1kwha": "1689.78096",
    "windowsG1kwha": "10286.9496",
    "totalG1kwha": "40473.9080568",
    "ventilationkwha": "5488.3818",
    "infiltrationkwha": "15918.587468111218921866",
    "totalLoss": "61880.877324911218921866",
    "annualHeatingDemand": "56439.377135739343921866",
    "spaceHeatingDemand": "348.17629324947158495907",
    "utilizationFactor": 0.85,
    "totalInternalHeatGainsKwha": "2091.09",
    "totalSolarGainsKwha": "4310.6749284375"
  },
  "heatingAndCoolingB": {
    "totalHeatingQ": "7843.4394176318345292",
    "totalCoolingQ": "3898.2644534872702088128259827205085542613023700219525903392",
    "totalAreaLessDoor": "420.583",
    "totalWindowArea": "28.03"
  },
  "annualSpaceHeatingB": {
    "wallAboveGradeG1kwha": "5625.6552648",
    "wallBelowGradeG1kwha": "1049.0267232",
    "roofG1kwha": "624.53304",
    "floorG1kwha": "1011.5676",
    "exteriorDoorsG1kwha": "163.17504",
    "windowsG1kwha": "3547.224",
    "totalG1kwha": "12021.181668",
    "ventilationkwha": "823.25727",
    "infiltrationkwha": "1591.8587468111218921866",
    "totalLoss": "14436.2976848111218921866",
    "annualHeatingDemand": "10722.1465205345593921866",
    "spaceHeatingDemand": "66.14525922599974948912",
    "utilizationFactor": 0.85,
    "totalInternalHeatGainsKwha": "2091.09",
    "totalSolarGainsKwha": "2278.49960503125"
  },
  "outputA": {
    "heatingLoad": "49.2837311299501798212",
    "coolingLoad": "10.06125971592634193487",
    "spaceHeating": "71399.2214196741799023325",
    "hotWater": "8406.25",
    "lightsAppliancesPlugs": "6789",
    "totalEnergyConsumption": "86594.4714196741799023325",
    "spaceHeatingDemand": "348.17629324947158495907",
    "spaceHeatingAnnualCost": "3687.712822789442090336376875",
    "hotWaterAnnualCost": "401.3984375",
    "lightsAppliancesPlugsAnnualCost": "1437.9102",
    "totalEnergyCosts": "5527.021460289442090336376875"
  },
  "outputB": {
    "heatingLoad": "8.62778335939501798212",
    "coolingLoad": "3.89826445348727020881",
    "spaceHeating": "6211.0732602672796960933",
    "hotWater": "1785.32608695652173913043",
    "lightsAppliancesPlugs": "5694",
    "totalEnergyConsumption": "13690.39934722380143522373",
    "spaceHeatingDemand": "66.14525922599974948912",
    "spaceHeatingAnnualCost": "931.660989040091954413995",
    "hotWaterAnnualCost": "267.7989130434782608695645",
    "lightsAppliancesPlugsAnnualCost": "854.1",
    "totalEnergyCosts": "2053.5599020835702152835595"
  },
  "economics": {
    "design": 0,
    "airtightness": null,
    "windows": null,
    "insulation": null,
    "ventilation": 4000,
    "heatPump": 5000,
    "waterHeater": 2000,
    "solar": null,
    "battery": null,
    "energyMonitor": 300,
    "annualSavings": "5527.021460289442090336376875",
    "accumulationSum": null,
    "investment": null,
    "irr": null,
    "monthlyPayments": null,
    "monthlySavings": 460.5851216907868,
    "monthlyNetSavings": null
  },
  "financing": {
    "windowsQuantity": "28.0",
    "airtightnessQuantity": "420.6",
    "insulationQuantity": "420.6",
    "solarQuantity": "64.4"
  },
  "maxEnergy": 90000
}
      </pre>
    </div>
  </div>
</div>
`;

exports[`renders formatQuestion with float question 1`] = `
<div
  className="input-group"
>
  <label
    className=""
    htmlFor="questionFloat"
  >
    Float
  </label>
  <input
    className="form-control"
    id="questionFloat"
    name="questionFloat"
    onChange={[Function]}
    required={true}
    type="number"
  />
</div>
`;

exports[`renders formatQuestion with gap question 1`] = `
<div
  className="spacer"
>
   
</div>
`;

exports[`renders formatQuestion with integer question 1`] = `
<div
  className="input-group"
>
  <label
    className=""
    htmlFor="question2Key"
  >
    Integer
  </label>
  <input
    className="form-control"
    id="question2Key"
    name="question2Key"
    onChange={[Function]}
    required={false}
    type="number"
  />
  <div
    className="input-group-append"
  >
    <span
      className="input-group-text"
    >
      IBU
    </span>
  </div>
</div>
`;

exports[`renders formatQuestion with select question 1`] = `
<div
  className="input-group"
>
  <label
    className=""
    htmlFor="question5Key"
  >
    Select
  </label>
  <select
    className="form-control"
    id="question5Key"
    name="question5Key"
    onChange={[Function]}
    required={false}
    value="disabled"
  >
    <option
      disabled="disabled"
      value="disabled"
    >
      Select an option
    </option>
    <option>
      Electricity
    </option>
    <option>
      Clean Electricity
    </option>
    <option>
      Natural Gass (Fossil)
    </option>
    <option>
      Clean Gas
    </option>
    <option>
      Propane
    </option>
    <option>
      Wood Pellets
    </option>
  </select>
  <div
    className="input-group-append"
  >
    <span
      className="input-group-text"
    >
      IBU
    </span>
  </div>
</div>
`;

exports[`renders formatQuestion with text question 1`] = `
<div
  className="input-group"
>
  <label
    className=""
    htmlFor="question3Key"
  >
    Text Label
  </label>
  <input
    className="form-control"
    id="question3Key"
    name="question3Key"
    onChange={[Function]}
    required={true}
    type="text"
  />
</div>
`;
